--- a/index.html
+++ b/index.html
@@ -13,4 +13,6 @@
     <div id="results"></div>
     <script src="script.js"></script>
 </body>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="script.js"> </script>
 </html>
