--- a/anime.html
+++ b/anime.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Media Recommendations</title>
+    <title>Anime Rec Version Selection</title>
     <style>
         body {
             background-color: black;
@@ -73,7 +73,7 @@
     <h1>Choose Media type</h1>
     <button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button>
     <div>
-        <a href="anime.html" class="media-link">anime recs</a>
+        <a href="v1/anime/index.html" class="media-link">v1</a>
     </div>
 
     <script>
