Update links in readme, multiple html, and the backend file

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a href="anime.html" class="media-link">anime recs</a>
     </div>
     <div>
-        <a href="games.html" class="media-link">(coming soon) game recs</a>
+        <a href="games.html" class="media-link">(may require setup) game recs</a>
     </div>
     <div>
         <a href="movies.html" class="media-link">(coming soon) movie recs</a>
