Update file path

--- a/movies.html
+++ b/movies.html
@@ -73,7 +73,7 @@
     <h1>Choose Media type</h1>
     <button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button>
     <div>
-        <a href="v1/anime/index.html" class="media-link">(coming soon) v1</a>
+        <a href="v1/movies/index.html" class="media-link">(coming soon) v1</a>
     </div>
 
     <script>
