--- a/v1/movies/index.html
+++ b/v1/movies/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button>
-    <h1>Game Recommender</h1>
+    <h1>Movie Recommender</h1>
     <input type="text" id="mediaInput" placeholder="Enter a title">
     <button onclick="getRecommendations()">Get Recommendations</button>
     <div id="results"></div>
