Update file paths for better encapsulation

--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
     <h1>Choose Media type</h1>
     <button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button>
     <div>
-        <a href="anime.html" class="media-link">anime recs</a>
+        <a href="redirect/anime.html" class="media-link">anime recs</a>
     </div>
     <div>
-        <a href="games.html" class="media-link">(may require setup) game recs</a>
+        <a href="redirect/games.html" class="media-link">(may require setup) game recs</a>
     </div>
     <div>
-        <a href="movies.html" class="media-link">(coming soon) movie recs</a>
+        <a href="redirect/movies.html" class="media-link">(coming soon) movie recs</a>
     </div>
     <div>
-        <a href="shows.html" class="media-link">(coming soon) show recs</a>
+        <a href="redirect/shows.html" class="media-link">(coming soon) show recs</a>
     </div>
 
     <script>
