--- a/redirect/shows.html
+++ b/redirect/shows.html
@@ -73,7 +73,7 @@
     <h1>Choose Media type</h1>
     <button class="toggle-btn" id="themeToggle">Toggle Dark/Light Mode</button>
     <div>
-        <a href="v1/games/index.html" class="media-link">(requires backend) v1</a>
+        <a href="../v1/shows/index.html" class="media-link">(coming soon) v1</a>
     </div>
 
     <script>
