Change file paths

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         <a href="redirect/games.html" class="media-link">(may require setup) game recs</a>
     </div>
     <div>
-        <a href="redirect/movies.html" class="media-link">(coming soon) movie recs</a>
+        <a href="redirect/movies.html" class="media-link">movie recs</a>
     </div>
     <div>
-        <a href="redirect/shows.html" class="media-link">(coming soon) show recs</a>
+        <a href="redirect/shows.html" class="media-link">show recs</a>
     </div>
 
     <script>
